# autoresearch-swarm

./: .gitignore  README.md  config.md  orchestrator.sh  plot_progress.py  pyproject.toml  run.sh  train.py
.github/workflows/: lint.yml
k8s/: README.md  job-template.yaml  prep-job.yaml  submit-job.sh  workspace-pod.yaml
steps/: 01_analyze.md  02_implement.md  03_launch.md  04_learnings.md
